--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       </div>
       <h3 class="text-center py-3">لو اتعرضت تحت يبقى نجحت الفكرة</h3>
       <div
-        class="row primary-header-cell justify-content-center fs-4 fw-bold mx-5"
+        class="row primary-header-cell justify-content-center fs-2 fw-bold mx-5"
         id="test"
+        style="min-height: 100px"
       >
         -
       </div>
