--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link href="./styles.css" rel="stylesheet" />
-    <title>تقرير المدرس اليومى</title>
+    <title>test</title>
   </head>
   <body dir="rtl" lang="ar">
     <div class="spinner" id="spinner">
