--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
       >
         -
       </div>
+      <h3 class="text-center py-3">هنا الطريقة التانى</h3>
+      <h3 class="text-center py-3" id="time"></h3>
+      <div
+        class="row primary-header-cell justify-content-center fs-2 fw-bold mx-5"
+        id="test2"
+        style="min-height: 100px"
+      >
+        -
+      </div>
     </div>
 
     <script type="module" src="index.js"></script>
